fix: Remove overflow-x hidden from html & body and add scroll classes to html element

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,6 @@ body {
   padding: 0;
   margin: 0;
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 * {
